Changed how the FOUT fix works. Now uses opacity instead of visibility.

--- a/app/assets/code-club/stylesheets/generic/_fout-fix.scss
+++ b/app/assets/code-club/stylesheets/generic/_fout-fix.scss
@@ -20,11 +20,11 @@ textarea,
 td,
 th {
   .wf-loading & {
-    visibility: hidden;
+    opacity: 0;
   }
 
   .wf-active   &,
   .wf-inactive & {
-    visibility: visible;
+    opacity: 1;
   }
 }
